# hugo-dataset

./: .gitignore  README.md  load_from_zotero.py  pyproject.toml  upload_dataset.py
hugo_dataset/: __init__.py  create_dataset.py  evidence.py  load_dataset.py  logger.py  retrievers.py  zotero_processor.py
hugo_dataset/retrievers/: __init__.py  acl.py  aps.py  arxiv.py  base.py  elsevier.py  mp.py  pubmed.py  sciencedirect.py  springer.py  wikipedia.py
