[project]
name = "dataset-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=3.3.1",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
]

[project.optional-dependencies]
rich = [
    "rich>=13.9.4",
]
